--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "moment": "^2.24.0",
+    "pondjs": "^0.8.10",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-timeseries-charts": "^0.16.1",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
